Acréscimo da seção QUEM SOMOS

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <article class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="centerRow navbar-nav">
             <a class="mx-1 nav-link text-white" href="#" id="begin">Início</a>
-            <a class="mx-1 nav-link text-white" href="#">Quem somos</a>
+            <a class="mx-1 nav-link text-white" href="#quemSomos">Quem somos</a>
             <a class="mx-1 nav-link text-white" href="#">Multimidia</a>
             <a class="mx-1 nav-link text-white">Depoimentos</a>
             <a class="mx-1 nav-link text-white">Contato</a>
@@ -100,9 +100,10 @@
 
     <!--Quem somos-->
     <section class="quemSomos row" id="quemSomos">
-      <article class="border col-xl-5 quemSomosBox mx-5 p-2">
+      <article class="col-xl-5 quemSomosBox mx-auto">
+        <img class="img my-2 mx-auto" src="/img/penumbra.jpg" alt="">
         <h4 class="text-center text-danger"><b>Quem somos</b></h4>
-        <p class="text-left text-secondary">
+        <p class="text-center text-secondary">
           O Penumbra Baiano é um projeto idealizado por Gustavo Duarte, um arte-educador que ama a arte em geral.
           O objetivo do Penumbra Baiano é fortalecer os trabalhos arte-Educacionais de pessoas das comunidades de
           Salvador, incentivando a leitura e a promoção do conhecimento mutuo. É também, levar informações relevantes
@@ -112,22 +113,34 @@
           reflexões, frases, poemas e críticas, ao bate-papo com transmissão ao vivo pelo Youtube com convidados de
           diversas áreas profissionais.
         </p>
+      </article>
+      <article class="col-xl-6 quemSomosBox mx-auto">
+        <h4 class="my-3 text-center text-danger"><b>O idealizador</b></h4>
+        <p class="text-center text-secondary">
+          Gustavo Duarte da Silva – Arteterapeuta e Pedagogo - Atua desde 2005 como Arte-educador nas comunidades de
+          Salvador-Bahia e atualmente está como instrutor de identidade artística, desenvolvendo talentos nas áreas de
+          teatro, dança, canto, desenho físico e digital dos jovens das comunidades de Pernambués, Cabula, Saboeiro,
+          Boca do rio, Imbuí, São Cristóvão, Cassange e Jardim das margaridas.
+          Com sua experiência em escrita criativa, atuou como educador de um projeto social para crianças da comunidade
+          do Calabar, também em Salvador-Bahia. Essa experiência é representada virtualmente através de contos, poesias,
+          poemas, reflexões e lives que abordam temas relevantes para a sociedade no Instagram Penumbra Baiano.
+        </p>
+        <img class="centerRow img mx-auto" src="/img/img2 - Copia.jpeg" alt="">
+      </article>
     </section>
 
-  </section>
 
 
-
-  <!--JAVASCRIPT BOOTSTRAP v 4.6-->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-    integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-    crossorigin="anonymous"></script>
+    <!--JAVASCRIPT BOOTSTRAP v 4.6-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+      integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
