Mudança no background do site

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 
     <!--Página inicial-->
     <main class="paginaInicial">
+    </main>
+    
       <section id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -96,7 +98,7 @@
           <span class="sr-only">Next</span>
         </button>
       </section>
-    </main>
+    
 
     <!--Quem somos-->
     <section class="quemSomos row" id="quemSomos">
@@ -117,10 +119,10 @@
       <article class="col-xl-6 quemSomosBox mx-auto">
         <h4 class="my-3 text-center text-danger"><b>O idealizador</b></h4>
         <p class="text-center text-secondary">
-          Gustavo Duarte da Silva – Arteterapeuta e Pedagogo - Atua desde 2005 como Arte-educador nas comunidades de
-          Salvador-Bahia e atualmente está como instrutor de identidade artística, desenvolvendo talentos nas áreas de
+          <span class="text-danger"><b>Gustavo Duarte da Silva</b></span>, arteterapeuta e pedagogo, atua desde 2005 como Arte-educador nas comunidades de
+          Salvador-BA e atualmente atua como instrutor de Identidade Artística, desenvolvendo talentos nas áreas de
           teatro, dança, canto, desenho físico e digital dos jovens das comunidades de Pernambués, Cabula, Saboeiro,
-          Boca do rio, Imbuí, São Cristóvão, Cassange e Jardim das margaridas.
+          Boca do Rio, Imbuí, São Cristóvão, Cassange e Jardim das Margaridas.
           Com sua experiência em escrita criativa, atuou como educador de um projeto social para crianças da comunidade
           do Calabar, também em Salvador-Bahia. Essa experiência é representada virtualmente através de contos, poesias,
           poemas, reflexões e lives que abordam temas relevantes para a sociedade no Instagram Penumbra Baiano.
