--- a/index.html
+++ b/index.html
@@ -54,9 +54,15 @@
     </nav>
 
     <!--Página inicial-->
-    <main class="paginaInicial">
+    <main class="paginaInicial row">
+      <div class="col-xl-6 paginaInicialTitle">
+        <h1 class="text-center text-white mx-auto"><b>Penumbra baiano</b></h1>
+      </div>
+      <div class="col-xl-6">
+        <h3 class="text-center text-white mx-auto">Poesia, literatura, utilidade pública, e muito mais...</h1>
+      </div>
     </main>
-    
+
       <section id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
