--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!--CSS GLOBAL-->
   <link rel="stylesheet" href="/css/estilos.css" defer>
-
+  <!--AOS ANIMATIONS CSS-->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -55,63 +56,64 @@
 
     <!--Página inicial-->
     <main class="paginaInicial row">
-      <div class="col-xl-6 paginaInicialTitle">
+      <article class="col-xl-6 paginaInicialTitle">
         <h1 class="text-center text-white mx-auto"><b>Penumbra baiano</b></h1>
-      </div>
-      <div class="col-xl-6">
+      </article>
+      <article class="col-xl-6">
         <h3 class="text-center text-white mx-auto">Poesia, literatura, utilidade pública, e muito mais...</h1>
-      </div>
+      </article>
     </main>
 
-      <section id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-        </ol>
-        <section class="carousel-inner">
-          <article class="carousel-item active">
-            <img src="/img/img4.jpeg" class="img d-flex mx-auto" alt="..." style="max-height: 600px;">
-            <div class="carousel-caption d-md-block">
-              <h1 class="text-warning">Venha conhecer o Projeto Penumbra</h1>
-            </div>
-          </article>
-          <article class="carousel-item">
-            <img src="/img/img3.jpeg" class="img d-flex mx-auto" alt="..." style="max-height: 600px;">
-            <div class="carousel-caption d-md-block">
-              <h1 class="text-white">Um espaço livre para poesia...</h1>
-            </div>
-          </article>
-          <article class="carousel-item">
-            <img src="/img/img1.jpeg" class="img d-flex mx-auto" alt="..." style="max-height: 600px;">
-            <div class="carousel-caption d-md-block">
-              <h1 class="text-white">...manifestações artísticas diversificadas...</h1>
-            </div>
-          </article>
-          <article class="carousel-item">
-            <img src="/img/img2.jpeg" class="img d-flex mx-auto" alt="..." style="max-height: 600px;">
-            <div class="carousel-caption d-md-block">
-              <h1 class="text-white">...teatro e muito mais!</h1>
-            </div>
-          </article>
-        </section>
-        <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </button>
+    <!--Carrossel-->
+    <section id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-aos="fade-up">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <section class="carousel-inner">
+        <article class="carousel-item active">
+          <img src="/img/img4.jpeg" class="img d-flex mx-auto" alt="..." style="max-height: 600px;">
+          <div class="carousel-caption d-md-block">
+            <h1 class="text-warning">Venha conhecer o Projeto Penumbra</h1>
+          </div>
+        </article>
+        <article class="carousel-item">
+          <img src="/img/img3.jpeg" class="img d-flex mx-auto" alt="..." style="max-height: 600px;">
+          <div class="carousel-caption d-md-block">
+            <h1 class="text-white">Um espaço livre para poesia...</h1>
+          </div>
+        </article>
+        <article class="carousel-item">
+          <img src="/img/img1.jpeg" class="img d-flex mx-auto" alt="..." style="max-height: 600px;">
+          <div class="carousel-caption d-md-block">
+            <h1 class="text-white">...manifestações artísticas diversificadas...</h1>
+          </div>
+        </article>
+        <article class="carousel-item">
+          <img src="/img/img2.jpeg" class="img d-flex mx-auto" alt="..." style="max-height: 600px;">
+          <div class="carousel-caption d-md-block">
+            <h1 class="text-white">...teatro e muito mais!</h1>
+          </div>
+        </article>
       </section>
-    
+      <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </button>
+    </section>
+
 
     <!--Quem somos-->
     <section class="quemSomos row" id="quemSomos">
-      <article class="col-xl-5 quemSomosBox mx-auto">
+      <article class="col-xl-5 quemSomosBox mx-auto" data-aos="fade-up" data-aos-duration="2500">
         <img class="img my-2 mx-auto" src="/img/penumbra.jpg" alt="">
         <h4 class="text-center text-danger"><b>Quem somos</b></h4>
-        <p class="text-center text-secondary">
+        <p class="text-center text-secondary" data-aos="fade-up" data-aos-duration="2500">
           O Penumbra Baiano é um projeto idealizado por Gustavo Duarte, um arte-educador que ama a arte em geral.
           O objetivo do Penumbra Baiano é fortalecer os trabalhos arte-Educacionais de pessoas das comunidades de
           Salvador, incentivando a leitura e a promoção do conhecimento mutuo. É também, levar informações relevantes
@@ -122,10 +124,11 @@
           diversas áreas profissionais.
         </p>
       </article>
-      <article class="col-xl-6 quemSomosBox mx-auto">
+      <article class="col-xl-6 quemSomosBox mx-auto" data-aos="fade-up" data-aos-duration="2500">
         <h4 class="my-3 text-center text-danger"><b>O idealizador</b></h4>
-        <p class="text-center text-secondary">
-          <span class="text-danger"><b>Gustavo Duarte da Silva</b></span>, arteterapeuta e pedagogo, atua desde 2005 como Arte-educador nas comunidades de
+        <p class="text-center text-secondary" data-aos="fade-up" data-aos-duration="3000">
+          <span class="text-danger"><b>Gustavo Duarte da Silva</b></span>, arteterapeuta e pedagogo, atua desde 2005
+          como Arte-educador nas comunidades de
           Salvador-BA e atualmente atua como instrutor de Identidade Artística, desenvolvendo talentos nas áreas de
           teatro, dança, canto, desenho físico e digital dos jovens das comunidades de Pernambués, Cabula, Saboeiro,
           Boca do Rio, Imbuí, São Cristóvão, Cassange e Jardim das Margaridas.
@@ -133,7 +136,7 @@
           do Calabar, também em Salvador-Bahia. Essa experiência é representada virtualmente através de contos, poesias,
           poemas, reflexões e lives que abordam temas relevantes para a sociedade no Instagram Penumbra Baiano.
         </p>
-        <img class="centerRow img mx-auto" src="/img/img2 - Copia.jpeg" alt="">
+        <img class="centerRow img mx-auto" src="/img/img2 - Copia.jpeg" alt="" data-aos="fade-up" data-aos-duration="2500">
       </article>
     </section>
 
@@ -149,6 +152,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
       integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
       crossorigin="anonymous"></script>
+    <!--AOS ANIMATIONS JS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 
 </html>
