Construção e desenvolvimento da seção MULTIMIDIAS

--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
 
     <!--Página inicial-->
     <div class="centerColumn paginaInicial" id="paginaInicial">
-      <h1 class="text-center text-white" data-aos="zoom-in" data-aos-duration="2000">Cultura, arte e educação</h1>
+      <h1 class="text-center text-white" data-aos="zoom-in" data-aos-duration="1500">Cultura, arte e educação</h1>
     </div>
 
     <!--Quem somos-->
     <div class="quemSomos" id="quemSomos">
       <div class="quemSomosTitulo">
-        <h2 class="my-3 text-center text-danger" data-aos="fade-up" data-aos-duration="2000"><b>Quem somos</b></h2>
+        <h2 class="my-3 text-center text-danger" data-aos="fade-up" data-aos-duration="1500"><b>Quem somos</b></h2>
       </div>
       <div class="container quemSomosTextos">
-        <h4 class="pl-5 mt-5 text-danger" data-aos="fade-up" data-aos-duration="2000"><b>Assim nascia o Penumbra...</b>
+        <h4 class="pl-5 mt-5 text-danger" data-aos="fade-up" data-aos-duration="1500"><b>Assim nascia o Penumbra...</b>
         </h4>
-        <p class="pl-5 my-3 text-justify text-secondary" data-aos="fade-up" data-aos-duration="2000">
+        <p class="pl-5 my-3 text-justify text-secondary" data-aos="fade-up" data-aos-duration="1500">
           O Penumbra é um projeto que se dedica à arte em geral, porém é mais focado no teatro e na poesia. O objetivo
           do Penumbra é fortalecer os trabalhos arte-educacionais de pessoas das comunidades de Salvador, incentivando
           a leitura e a promoção do conhecimento mútuo. <br /><br /> Além disso, pretendemos também levar informações
@@ -83,11 +83,11 @@
         <button class="ml-5 my-3 btn btn-danger">Saiba mais sobre nós</button>
       </div>
       <div class="my-3 quemSomosImagem">
-        <img class="d-block mt-5 img mx-auto" src="/img/fundo.jpg" alt="" data-aos="fade-up" data-aos-duration="2000">
+        <img class="d-block mt-5 img mx-auto" src="/img/fundo.jpg" alt="" data-aos="fade-up" data-aos-duration="1500">
       </div>
       <div class="container quemSomosTextosGuga">
-        <h4 class="pl-5 mt-4 text-danger" data-aos="fade-up" data-aos-duration="2000"><b>Gustavo Duarte</b></h4>
-        <p class="pl-5 mt-3 text-justify text-secondary" data-aos="fade-up" data-aos-duration="2000">
+        <h4 class="pl-5 mt-4 text-danger" data-aos="fade-up" data-aos-duration="1500"><b>Gustavo Duarte</b></h4>
+        <p class="pl-5 mt-3 text-justify text-secondary" data-aos="fade-up" data-aos-duration="1500">
           Gustavo Duarte da Silva – Arteterapeuta e Pedagogo - Atua desde 2005 como Arte-educador nas comunidades de
           Salvador-Bahia e atualmente está como instrutor de identidade artística, desenvolvendo talentos nas áreas de
           teatro, dança, canto, desenho físico e digital dos jovens das comunidades de Pernambués, Cabula, Saboeiro,
@@ -109,20 +109,20 @@
     <a href="#navegacao"><i class="ancoraNavegacao fa-solid fa-house text-danger"></i></a>
 
     <!--Seção Multimidias-->
-    <section class="border secaoMultimidia" id="secaoMultimidia">
-      <article class="multimidiaTitulo">
+    <section class="border secaoMultimidia" id="secaoMultimidia" data-aos="fade-up" data-aos-duration="1500">
+      <article class="multimidiaTitulo" data-aos="fade-up" data-aos-duration="1500">
         <h2 class="text-center text-danger">Nossas principais produções multimidia</h2>
       </article>
-      <article class="centerColumn multimidiaVideo1">
-        <img class="d-block img mx-auto w-100" src="/img/boneco.png" alt="">
+      <article class="centerColumn multimidiaVideo1" data-aos="fade-up" data-aos-duration="1500">
+        <img class="d-block img mx-auto w-100" src="/img/boneco.png" alt="" data-aos="fade-up" data-aos-duration="1500">
         <a href="https://drive.google.com/file/d/18tUlv_bxM105TlHKBtgfgrk4ywd8B2vv/view?usp=drive_link" target="_blank">Assista o vídeo completo</a>
       </article>
-      <article class="centerColumn multimidiaVideo2">
-        <img class="d-block img mx-auto w-100" src="/img/intoleranciaReligiosa.png" alt="">
+      <article class="centerColumn multimidiaVideo2" data-aos="fade-up" data-aos-duration="1500">
+        <img class="d-block img mx-auto w-100" src="/img/intoleranciaReligiosa.png" alt="" data-aos="fade-up" data-aos-duration="1500">
         <a href="https://youtu.be/rvtuxOQFvOQ" target="_blank">Assista o vídeo completo</a>
       </article>
-      <article class="multimidiaVideo3"></article>
-      <article class="border multimidiaVideo4"></article>
+      <article class="multimidiaVideo3" data-aos="fade-up" data-aos-duration="1500"></article>
+      <article class="border multimidiaVideo4" data-aos="fade-up" data-aos-duration="1500"></article>
     </section>
 
     <!--Seção de Depoimentos-->
