Construção da seção PROGRAMAÇÃO

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <a class="mx-1 nav-link text-dark" href="#" id="begin">Início</a>
             <a class="mx-1 nav-link text-dark" href="#quemSomos">Quem somos</a>
             <a class="mx-1 nav-link text-dark" href="#secaoMultimidia">Multimidia</a>
+            <a class="mx-1 nav-link text-dark" href="#secaoProgramacao">Programação</a>
             <a class="mx-1 nav-link text-dark" href="#depoimentos">Depoimentos</a>
-            <a class="mx-1 nav-link text-dark">Contato</a>
             <a class="mx-1 nav-link text-dark">Parceiros</a>
             <a class="mx-1 nav-link rounded text-danger" id="btnMenuDonate"><b><i
                   class="fa-solid fa-hand-holding-dollar"></i></b> Seja um apoiador</a>
@@ -109,7 +109,7 @@
     <a href="#navegacao"><i class="ancoraNavegacao fa-solid fa-house text-danger"></i></a>
 
     <!--Seção Multimidias-->
-    <section class="border secaoMultimidia" id="secaoMultimidia" data-aos="fade-up" data-aos-duration="1500">
+    <section class="secaoMultimidia" id="secaoMultimidia" data-aos="fade-up" data-aos-duration="1500">
       <article class="multimidiaTitulo" data-aos="fade-up" data-aos-duration="1500">
         <h2 class="text-center text-danger">Nossas principais produções multimidia</h2>
       </article>
@@ -121,9 +121,50 @@
         <img class="d-block img mx-auto w-100" src="/img/intoleranciaReligiosa.png" alt="" data-aos="fade-up" data-aos-duration="1500">
         <a href="https://youtu.be/rvtuxOQFvOQ" target="_blank">Assista o vídeo completo</a>
       </article>
-      <article class="multimidiaVideo3" data-aos="fade-up" data-aos-duration="1500"></article>
-      <article class="border multimidiaVideo4" data-aos="fade-up" data-aos-duration="1500"></article>
+      <article class="centerColumn multimidiaVideo3" data-aos="fade-up" data-aos-duration="1500">
+        <img class="d-block img mx-auto w-100" src="/img/img1.jpg" alt="" data-aos="fade-up" data-aos-duration="1500">
+        <a href="" target="_blank">Assista o vídeo completo</a>
+      </article>
+      <article class="centerColumn multimidiaVideo4" data-aos="fade-up" data-aos-duration="1500">
+        <img class="d-block img mx-auto w-100" src="/img/img1.jpg" alt="" data-aos="fade-up" data-aos-duration="1500">
+        <a href="" target="_blank">Assista o vídeo completo</a>
+      </article>
     </section>
+
+    <!--Seção Programação-->
+    <div class="centerRow container secaoProgramacao" id="secaoProgramacao">
+      <div class="pl-5 programacao" data-aos="fade-up" data-aos-duration="1500">
+        <div class="card rounded shadow" style="width: 18rem;">
+          <img class="d-block img w-100 mx-auto" src="/img/agosto.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title text-danger">Bate-papo empreendedor</h5>
+            <p class="card-text text-justify">Três excelentes palestras sobre o empreendedorismo, mostrando os seus potenciais e desafios</p>
+            <a href="#" class="btn btn-danger">Assistir na íntegra</a>
+          </div>
+        </div>
+      </div>
+      <div class="pl-5 programacao" data-aos="fade-up" data-aos-duration="1500">
+        <div class="card rounded shadow" style="width: 18rem;">
+          <img class="d-block img w-100 mx-auto" src="/img/amorProprio.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title text-danger">Seu verdadeiro amor</h5>
+            <p class="card-text text-justify">Uma divertida conversa sobre o amor e a relação com o outro, com participação de Penumbrinha</p>
+            <a href="#" class="btn btn-danger">Assistir na íntegra</a>
+          </div>
+        </div>
+      </div>
+      <div class="pl-5 programacao" data-aos="fade-up" data-aos-duration="1500">
+        <div class="card rounded shadow" style="width: 18rem;">
+          <img class="d-block img w-100 mx-auto" src="/img/agosto.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title text-danger">Como está sua saúde mental?</h5>
+            <p class="card-text text-justify">Duas psicólogas clinicas chamam atenção para a importância de se manter uma boa saúde mental</p>
+            <a href="#" class="btn btn-danger">Assistir na íntegra</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <!--Seção de Depoimentos-->
     <div class="depoimentos" id="depoimentos">
